styles.css
.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

#white-container {
    margin-top: 30px;
    margin-left: 15px;
    margin-right: 15px;
    width: 40%;
    min-height: 40%;
    max-height: auto;
    position: absolute;
    left: 50%;
    transform: translate(-50%, -160%);
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem;
    z-index: 1;
    border-radius: 20px;
}

h1 {
    font-size: 35px;
    display: flex;
    align-items: center;
}

.answer {
    display: none;
}

#top-background-image {
    background-image: url(images/background-pattern-desktop.svg);
    background-color: rgb(32, 1, 53);
    height: 300px;
}

#bottom-color {
    background-color: hsl(275, 100%, 97%);
    height: 60vh;
}

body {
    display: flex;
    flex-direction: column;
    background-color: transparent;
    justify-content: center;
    align-content: center;
}

@media (max-width: 768px) {
    #white-container {
        width: 60%;
        /* Adjust the width for smaller screens if needed */
        height: auto;
        /* Adjust the height for smaller screens if needed */
        /* Adjust the vertical translation */
    }
}

/* Media query for devices with a max width of 480px (mobile phones) */

@media (max-width: 480px) {
    #white-container {
        width: 90%;
        height: auto;
    }
}

.plus-minus {
    background-image: url(images/icon-plus.svg);
    width: 30px;
    height: 30px;
}

.q-and-a {
    display: grid;
}

